# py_option

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: action.yml
py_option/: __init__.py  option.py
src/py_option/: __init__.py
tests/: test_methods.py  test_option.py
