[tool.poetry]
name = "py_option"
version = "0.1.0"
description = ""
authors = ["Masahiko Hamazawa <ichigyo.zanmai@gmail.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
